# m365-inbox-serverless-agent-python

./: .env.example  .funcignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  agents.config.yaml  azure.yaml  chat.py  daily-briefing.agent.md  function_app.py  host.json  inbox-chat.agent.md  inbox-triage.agent.md  local.settings.json.example  mcp.json  pyproject.toml  requirements.txt  weekly-rule-suggestions.agent.md
.devcontainer/: Dockerfile  devcontainer.json  first-run-notice.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: README.md  architecture.mmd  configuration.md  customize.md  deploy-python-313.md  how-it-works.md  troubleshooting.md  use-cases.md
infra/: main.bicep  main.parameters.json
infra/agent/: standard-ai-project.bicep
infra/app/: connectors.bicep
infra/scripts/: addclientip.ps1  addclientip.sh  authorize-connectors.ps1  authorize-connectors.sh  configure-trigger.ps1  configure-trigger.sh  createlocalsettings.ps1  createlocalsettings.sh  discover-teams-ids.ps1  discover-teams-ids.sh  hydrate-local-settings.ps1  hydrate-local-settings.sh  setuplocalenvironment.sh  use-cloud-host.ps1  use-cloud-host.sh
sample-data/: inbox.json
scripts/: hydrate-local-settings.sh
skills/: email-reply.md  inbox-intelligence.md  inbox-poll.md  inbox-read.md  rule-suggestions.md  teams-channels.md  teams-post.md  vip-rules.md
tools/: __init__.py  _log.py  action_log.py  list_inbox.py  mark_read.py  match_rule.py  post_teams.py  send_reply.py
(+5 files in other folders)
