[project]
name = "m365-inbox-agent-functions-python"
version = "0.1.0"
description = "M365 inbox-triage sample for the Azure Functions Serverless Agents Runtime (preview)."
requires-python = ">=3.13,<3.14"
dependencies = [
    "azurefunctions-agents-runtime>=0.1.0b1",
    "azure-functions",
    "azure-identity",
    "pydantic",
]

[dependency-groups]
dev = [
    "ruff",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
